# miss-yaya

./: .gitignore  AI_Infrastructure_Deep_Research.md  AI_Pre_Development_Master_Plan.md
yaya-ai/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-hf.txt  requirements-kaggle.txt  requirements.txt  setup.py
yaya-ai/data/: yaya_qa_export.xlsx
yaya-ai/docs/: AI_INFRASTRUCTURE_DEEP_RESEARCH.md  PRETRAINING_GUIDE.md  TRAINING_ROADMAP.md  benchmark_results.jsonl  dashboard.html  math_curriculum.md  math_progress.jsonl  neuroplasticity.md
yaya-ai/notebooks/: kaggle_curriculum.ipynb  kaggle_curriculum.py  kaggle_pretrain.ipynb  kaggle_train.ipynb  run_yaya.ipynb  train_colab.ipynb
yaya-ai/scripts/: _save_batch_396_400.py  _save_batch_426_430.py  _save_batch_431_435.py  _save_batch_436_440.py  _save_batch_441_445.py  _save_batch_446_450.py  _save_batch_451_455.py  _save_batch_461_465.py  _save_batch_471_475.py  _save_batch_491_495.py  _save_batch_496_500.py  _save_batch_501_505.py  add_chess_data.py  add_format_enforcement.py  add_kenya_data.py  add_personality_data.py  add_phase10_multilingual.py  add_phase11_values.py  add_phase7_metacognition.py  add_phase8_commonsense.py  add_phase9_creativity.py  add_reasoning_data.py  add_tom_data.py  align_dpo_hf.py  benchmark.py  build_dataset.py  build_reasoning_dataset.py  build_short_qa.py  chat.py  chat_tiny.py  colab_run.py  colab_run_phases.py  colab_run_sft.py  continuous_learn.py  convert_checkpoint.py  curriculum_phases.py  curriculum_phases_ext.py  deploy_model.py  (+85 more)
(+340 files in other folders)
